[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dolphindo"
version = "0.1.0"
description = "Simple Agent library"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ivan Trajkovic", email = "glofloworg@gmail.com" }]
dependencies = []

[tool.setuptools]
packages = ["dolphindo"]
